# fimserv

./: README.md  pyproject.toml  test.ipynb
docs/: HUC.csv  code_usage.ipynb
plot/: comparestreamflow.py  src.py  usgs.py
src/fimserv/: runFIM.py  vizualizationFIM.py
src/fimserv/FIMsubset/: __init__.py
src/fimserv/plot/: __init__.py  src.py  usgsandfid.py
src/fimserv/streamflowdata/: __init__.py  forecasteddata.py
src/owphandfim/: __init__.py  datadownload.py  runFIM.py  vizualizationFIM.py
src/owphandfim/FIMsubset/: __init__.py  shpsubset.py  xycoord.py
src/owphandfim/plot/: __init__.py  comparestreamflow.py  nwmfid.py  src.py  usgs.py
src/owphandfim/statistics/: __init__.py  calculatestatistics.py
src/owphandfim/streamflowdata/: __init__.py  forecasteddata.py  nwmretrospective.py
subsetBoundary/: boundary.gpkg
tests/: test_03020202.py  test_computationaltime.py  test_datadownload.py  test_forecasteddata.py  test_nwmdata.py  test_plot.py  test_runfim.py  test_statistics.py  test_subsetFIM.py
