[tool.poetry]
name = "owphandfim"
version = "0.1.0"
description = "Framework which is developed with the purpose of quickly generating Flood Inundation Maps (FIM) for emergency response and risk assessment. It is developed under Surface Dynamics Modeling Lab (SDML)."
authors = ["Supath Dhital <sdhital@crimson.ua.edu>"]
license = "GPL-3.0"
readme = "README.md"
maintainers = ["Supath Dhital <sdhital@crimson.ua.edu>"]
homepage = "https://github.com/sdmlua/OperationalOWPFIM"
repository = "https://github.com/sdmlua/OperationalOWPFIM"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest = "^8.3.3"
teehr = {git = "https://github.com/RTIInternational/teehr.git", rev = "main"}
numpy = "1.26.0"
pyarrow = "^14.0.1"
utils = "^1.0.2"
netcdf4 = "^1.7.2"
black = "^24.10.0"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

