[tool.poetry]
name = "owphandfim"
version = "0.1.0"
description = "Framework which is developed with the purpose of quickly generating Flood Inundation Maps (FIM) for emergency response and risk assessment. It is developed under Surface Dynamics Modeling Lab (SDML)."
authors = ["Supath Dhital <sdhital@crimson.ua.edu>"]
license = "GPL-3.0"
readme = "README.md"
maintainers = ["Supath Dhital <sdhital@crimson.ua.edu>"]
homepage = "https://github.com/sdmlua/OperationalOWPFIM"
repository = "https://github.com/sdmlua/OperationalOWPFIM"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.3.3"
teehr = {git = "https://github.com/RTIInternational/teehr.git", rev = "v0.3.28"}
numpy = "1.26.0"
pyarrow = "^14.0.0"
utils = "^1.0.2"
netcdf4 = "1.6.5"
matplotlib = "^3.9.2"
awscli = "1.34.23"
botocore = "1.35.23"
numba = "^0.60.0"
bottleneck = "^1.3.6"
geemap = "0.32.1"
localtileserver = "^0.10.5"
tqdm = "^4.67.0"
scipy = "^1.14.1"
notebook = "7.2.1"
widgetsnbextension = "4.0.11"
jupyterlab = "4.2.3"
jupyterlab-pygments = "^0.3.0"
jupyterlab-server = "^2.27.3"
jupyterlab-widgets = "^3.0.11"
aiohttp = "3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"